# ioparse-lib

./: CMakeLists.txt  README.md  test.cpp
include/ioparse/: parse.hpp  prompt.hpp
src/: ioparselib.h  main.cpp  parse.cpp  prompt.cpp
